# SOLHUNT-GAME

./: .env  .env.example  README.md  package-lock.json  package.json
config/: webpack.config.js
program/: Anchor.toml  Readme.md  copy-idls.sh  package-lock.json  package.json
program/programs/main-program-final/: Cargo.toml
program/programs/main-program-final/src/: lib.rs  lib.sample.rs
program/tests/: main-program-final.js  main-program.js
programs/: Anchor.toml  copy-idls.sh  package-lock.json  package.json
programs/programs/gamedata/: Cargo.toml
programs/programs/gamedata/src/: lib.rs
programs/tests/: gamedata.js
public/: index.html
scripts/: build.js  initializeGameAdmin.js  main_program_final.json  start.js  test.js
src/: index.css  index.tsx
src/app/: index.tsx  routes.tsx  wallet.tsx
src/app/game/: coins.js  game.js  heart.js
src/app/game/assets/: angel.json  chest.json  coins.json  demon.json  door.json  door_1.json  dungen-01.json  dungen-02..json  dungen-02.json  enemyKnight.json  flamethrow.json  flask.json  ghost.json  ghoul.json  hero.json  key.json  lizard.json  newKnight.json  plantZombie.json  reaper.json  rock.json  spikes.json  torch.json  torch_burn.json  tradecomp.json  wall.json  wizard.json
src/app/game/enemies/: Knight.js  angel.js  chainlink.js  demon.js  ghost.js  ghoul.js  lizard.js  newKnight.js  plantZombie.js  reaper.js  rock.js
src/app/game/events/: eventsCenter.js
src/app/game/hero/: faune.js  wizard.js
src/app/pages/: middleware.tsx
src/app/web3/: account.json  program.js  program.ts  utils.js
(+59 files in other folders)
